--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       const Footer = () => {
           return (
               <footer className="w-full py-6 text-center text-slate-500">
-                  <p>&copy; {new Date().getFullYear()} - Designed for Higher Education Students.</p>
+                  <p>&copy; {new Date().getFullYear()} - Tony Myers.</p>
               </footer>
           );
       };
@@ -136,9 +136,9 @@
                   description: "A learning companion to help you develop genuine understanding, produce your own work, and become a more confident, critical, and independent thinker. It guides your reasoning, it doesn't replace it.",
                   link: 'https://m365.cloud.microsoft:443/chat/?titleId=T_29420ced-78cb-75c9-d668-92906ac92f64&source=embedded-builder',
                   examples: [
-                      'Help me understand the concept of cognitive dissonance.',
-                      'Can you help me structure my essay on the causes of the French Revolution?',
-                      `I'm stuck on this coding problem, can you guide me through it?`,
+                      'Help me understand how the Frank-Starling law relates to cardiac output during exercise',
+                      'Explain the difference between herd immunity and vaccine efficacy in simple terms',
+                      `Why does hypokalemia cause muscle weakness but not cardiac arrest in most cases? , Can you walk me through this?`,
                       'Critique my thesis statement for my literature review.'
                   ],
                   icon: <BrainIcon className="w-10 h-10 text-brand-primary" />,
@@ -149,8 +149,8 @@
                   description: 'A scholarly assistant prioritizing factual accuracy, verifiable evidence, and academic integrity. Use it for research, writing, exploring literature, and ensuring your work is built on a solid foundation.',
                   link: 'https://m365.cloud.microsoft:443/chat/?titleId=T_ef40e31a-faa0-5e5c-2f90-a22c14d9ed13&source=embedded-builder',
                   examples: [
-                      'Find peer-reviewed sources on the impact of climate change on coral reefs.',
-                      'Check the factual accuracy of this paragraph about the Roman Empire.',
+                      'You are a highly experienced peer-reviewed journal article reviewer. Please provide a critical review of the following work, highlighting its strengths, weaknesses, and what could be improved to strengthen its academic rigour. Separate verifiable issues from matters of interpretation. .',
+                      'Check whether this claim is supported by credible evidence. Provide sources if they exist, or state clearly if evidence is weak, mixed, or absent. The claim is ""Vitamin C supplements prevent or significantly reduce the duration of the common cold in the general population.',
                       `Can you provide a full citation for the book 'Sapiens' by Yuval Noah Harari?`,
                       'Explain the methodology of a randomized controlled trial.'
                   ],
